<resources>
    <string name="app_name">TeachingTasks</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="background">background</string>
    <string name="innerheader">innerheader</string>
    <string name="outerheader">outerheader</string>
    <string name="test_button">Test</string>
    <string name="title_activity_game_select">GameSelectActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
