<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userSelectLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSelectActivity">

    <ImageView
        android:id="@+id/woodHeaderImageView2"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginBottom="630dp"
        android:adjustViewBounds="true"
        android:background="#875B42"
        android:contentDescription="@string/outerheader"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:tint="#634433"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/chalkwood" />

    <ImageView
        android:id="@+id/woodHeaderImageView"
        android:layout_width="0dp"
        android:layout_height="104dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/innerheader"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:tint="#99875B42"
        app:layout_constraintBottom_toBottomOf="@+id/woodHeaderImageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/woodHeaderImageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chalkwood" />

    <ImageView
        android:id="@+id/chalkBackgroundImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/woodHeaderImageView2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/chalk" />

    <Button
        android:id="@+id/editButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="133dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        android:drawableStart="@android:drawable/ic_menu_manage"
        android:fontFamily="casual"
        android:text="@string/edit"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/woodHeaderImageView"
        app:layout_constraintStart_toStartOf="@+id/woodHeaderImageView"
        app:layout_constraintTop_toTopOf="@+id/woodHeaderImageView"
        app:layout_constraintVertical_bias="0.448"
        tools:visibility="visible" />

    <Button
        android:id="@+id/addButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="143dp"
        android:layout_height="55dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:drawableStart="@android:drawable/ic_menu_add"
        android:fontFamily="casual"
        android:text="@string/add"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/woodHeaderImageView"
        app:layout_constraintEnd_toEndOf="@+id/woodHeaderImageView"
        app:layout_constraintTop_toTopOf="@+id/woodHeaderImageView"
        app:layout_constraintVertical_bias="0.448"
        tools:visibility="visible" />

    <ScrollView
        android:id="@+id/userSelectScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:fillViewport="false"
        android:isScrollContainer="true"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/chalkBackgroundImageView"
        app:layout_constraintTop_toBottomOf="@+id/woodHeaderImageView2"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/userSelectionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/addTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintStart_toEndOf="@+id/editButton"
        tools:layout_editor_absoluteY="39dp" />

</androidx.constraintlayout.widget.ConstraintLayout>