<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/woodHeaderImageView2"
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginBottom="630dp"
        android:adjustViewBounds="true"
        android:background="#875B42"
        android:contentDescription="@string/outerheader"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:tint="#634433"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/chalkwood" />

    <ImageView
        android:id="@+id/woodHeaderImageView"
        android:layout_width="0dp"
        android:layout_height="104dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/innerheader"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:tint="#99875B42"
        app:layout_constraintBottom_toBottomOf="@+id/woodHeaderImageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/woodHeaderImageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chalkwood" />

    <ImageView
        android:id="@+id/chalkBackgroundImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/background"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/woodHeaderImageView2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/chalk" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="tempUser"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/woodHeaderImageView"
        app:layout_constraintEnd_toEndOf="@+id/woodHeaderImageView"
        app:layout_constraintStart_toStartOf="@+id/woodHeaderImageView"
        app:layout_constraintTop_toTopOf="@+id/woodHeaderImageView" />

    <TextView
        android:id="@+id/mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="Mute"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customTask" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="Logout"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mute" />

    <TextView
        android:id="@+id/customTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="Custom Task"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/woodHeaderImageView2" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="#073D64"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/taskNavButton"
            android:layout_width="62dp"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/ic_task_button" />

        <Button
            android:id="@+id/statisticsNavButton"
            android:layout_width="56dp"
            android:layout_height="41dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/ic_stats_button"
            android:gravity="center" />

        <Button
            android:id="@+id/settingsNavButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/ic_settings_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>